# simple-cli

./: .gitignore  Cargo.toml  README.md  azure-pipelines.yml  commands.local.yaml  commands.yaml  config.yaml  params.yaml  pipeline.yaml  scli.commands.yaml  scli.params.yaml  simple-cli.yaml
.github/workflows/: release.yml  rust.yml
src/: cli.rs  main.rs
src/commands/: arguments.rs  cli_utils.rs  mod.rs  render.rs  runner.rs  utils.rs
src/commands/filters/: mod.rs  param_filter.rs
src/commands/kubernetes/: namespace.rs
src/config/: context.rs  loader.rs  mod.rs  models.rs
src/interactive/: menu.rs  mod.rs  switchers.rs
src/utils/: io.rs  mod.rs  shell.rs  string.rs
