[package]
name = "simple-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "scli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
dialoguer = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tera = "1.20.0"
dirs = "6.0.0"
serde_json = "1.0.145"
colored = "2.1"
log = "0.4"
env_logger = "0.11"
